--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   pinput: ^4.0.0
   carousel_slider: ^4.2.1
 
+  get: ^4.6.6
+  dio: ^5.5.0+1
+  fluttertoast: ^8.2.6
+  hexcolor: ^3.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
